--- a/pom.xml
+++ b/pom.xml
@@ -123,6 +123,11 @@
       <artifactId>jackson-annotations</artifactId>
       <version>2.14.2</version>
     </dependency>
+      <dependency>
+          <groupId>com.blackbank</groupId>
+          <artifactId>Bank</artifactId>
+          <version>1.0-SNAPSHOT</version>
+      </dependency>
   </dependencies>
 
   <build>
